2015-02-27  Albrecht Dreß

	* libbalsa/send.c (libbalsa_message_queue), (lbs_process_queue),
	(libbalsa_fill_msg_queue_item_from_queu): complete support for
	DSN's

2015-02-24  Albrecht Dreß

	Support for successful DSN's

	* libbalsa/identity.[hc]: define default DSN setting, load and
	store it
	* libbalsa/identity.c, src/balsa-index.c,
	src/filter-edit-callbacks.c: fix clang nagging about a misplaced
	'static const' qualifier
	* libbalsa/message.h: add request dsn flag
	* libbalsa/send.c: instruct libesmtp to request the DSN
	* libbalsa/send.c: pass const parameter as const
	* src/balsa-icons.c: add braces around macro
	* src/sendmsg-window.[hc]: add GUI stuff for requesting the DSN

2015-02-23  Albrecht Dreß

	Build with clang

	* configure.in:
	* libbalsa/files.c (libbalsa_icon_finder):
	* libbalsa/imap/auth-cram.c (imap_auth_cram):
	* libbalsa/imap/imap-commands.c (imap_mbox_handle_can_do):
	* libbalsa/imap/imap-handle.c (imap_get_address):
	* libbalsa/imap/imap_compress.c (imap_compress_init):
	* libbalsa/imap/imap_tst.c (main):
	* libbalsa/libbalsa.c (libbalsa_init):
	* libbalsa/mailbox_imap.c (libbalsa_mailbox_imap_noop),
	(lbmi_get_imap_sort_key):
	* libbalsa/mailbox_mbox.c (libbalsa_mailbox_mbox_sync):
	* libbalsa/mailbox_mh.c (lbm_mh_get_info), (lbm_mh_parse_mailbox),
	(lbm_mh_flag_line), (libbalsa_mailbox_mh_sync):
	* libbalsa/message.h:
	* libbalsa/send.c (lbs_process_queue):
	* libbalsa/smtp-server.c (smtp_server_tls_widget),
	(smtp_server_response):
	* libbalsa/url.c:

2015-02-16  Albrecht Dreß

	* libbalsa/imap/imap-tls.c (imap_create_ssl): disable SSLv3,
	with an option in the code to override, and enable TLSv1.1 and 1.2


2013-07-14  Peter Bloomfield

	Fix bgo #704159 (Igor Pashev)

	* configure.ac: add check for struct utsname.domainname, and
	AC_USE_SYSTEM_EXTENSIONS.
	* libbalsa/filter-file.c: do not define __EXTENSIONS__.
	* libbalsa/send.c (libbalsa_set_message_id): check
	HAVE_STRUCT_UTSNAME_DOMAINNAME as well as _GNU_SOURCE.
