@@ -1,3 +1,8 @@
+2015-03-01  Albrecht Dreß
+
+	* libbalsa/send.c (libbalsa_set_message_id): obfuscate the
+	message-id header.
+
 2015-02-27  Albrecht Dreß
 
 	* libbalsa/send.c (libbalsa_message_queue), (lbs_process_queue),
